# clay

./: .gitmodules  CMakeLists.txt  FIXME  Jenkinsfile  Makefile.am  README  TODO  autogen.sh  clay-config.cmake  configure.ac  get_submodules.sh  redo.sh
doc/: Doxyfile.in  Makefile.am  clay.texi
include/clay/: array.h  beta.h  betatree.h  clay.h  data.h  errors.h  functions.h  ident.h  list.h  macros.h.in  options.h  prototype_function.h  relation.h  stack.h  transformation.h  util.h
source/: array.c  beta.c  betatree.c  clay.c  data.c  errors.c  functions.c  ident.c  list.c  options.c  parser.y  prototype_function.c  relation.c  scanner.l  stack.c  transformation.c  util.c
tests/: Makefile.am  autoclay.sh  check_fail.sh  check_source_result.py  check_tests.sh  check_unitary.sh  checker.sh  cloog.sh  redo.sh  redo_scop.sh  rmscop.sh
tests/must_fail/: beta_not_found.c  beta_not_found.c.clay.scop  beta_not_found.c.orig.scop  collapse_multi.c  collapse_multi.c.clay.scop  collapse_multi.c.orig.scop  context.c  context.c.clay.scop  context.c.orig.scop  dimprivatize_cant_privatize.c  dimprivatize_cant_privatize.c.clay.scop  dimprivatize_cant_privatize.c.orig.scop  embed_not_stmt.c  embed_not_stmt.c.orig.scop  embed_wrong_beta.c  embed_wrong_beta.c.clay.scop  embed_wrong_beta.c.orig.scop  fission_overflow_loop.c  fission_overflow_loop.c.orig.scop  fission_overflow_statement.c  fission_overflow_statement.c.orig.scop  grain_negative.c  grain_negative.c.clay.scop  grain_negative.c.orig.scop  grain_overflow.c  grain_overflow.c.orig.scop  interchange_overflow_loop.c  interchange_overflow_loop.c.orig.scop  interchange_overflow_statement.c  interchange_overflow_statement.c.orig.scop  interchange_overflow_statement2.c  interchange_overflow_statement2.c.clay.scop  interchange_overflow_statement2.c.orig.scop  iss_inequation.c  iss_inequation.c.clay.scop  iss_inequation.c.orig.scop  iss_not_in_a_loop.c  iss_not_in_a_loop.c.clay.scop  iss_not_in_a_loop.c.orig.scop  meld_not_found.c  (+52 more)
tests/regression/: bench.h  beta.c  beta2.c  list.c  relation.c
tests/tests/: ax-do1.c  ax-do1.c.clay.scop  ax-do1.c.orig.scop  ax-do3.c  ax-do3.c.clay.scop  ax-do3.c.orig.scop  ax-do_double_tile.c  ax-do_double_tile.c.clay.scop  ax-do_double_tile.c.orig.scop  double_stripmine.c  double_stripmine.c.clay.scop  double_stripmine.c.orig.scop  double_tile.c  double_tile.c.clay.scop  double_tile.c.orig.scop  embed_unembed_invariant.c  embed_unembed_invariant.c.clay.scop  embed_unembed_invariant.c.orig.scop  iss_collapse_invariant.c  iss_collapse_invariant.c.clay.scop  iss_collapse_invariant.c.orig.scop  stripmine_linearize_invariant.c  stripmine_linearize_invariant.c.clay.scop  stripmine_linearize_invariant.c.orig.scop  stripmine_linearize_invariant2.c  stripmine_linearize_invariant2.c.clay.scop  stripmine_linearize_invariant2.c.orig.scop  stripmine_linearize_one_invariant.c  stripmine_linearize_one_invariant.c.clay.scop  stripmine_linearize_one_invariant.c.orig.scop
tests/unitary/: block.c  block.c.clay.scop  block.c.orig.scop  block_inside.c  block_inside.c.clay.scop  block_inside.c.orig.scop  collapse_loop.c  collapse_loop.c.clay.scop  collapse_loop.c.orig.scop  collapse_multi.c  collapse_multi.c.clay.scop  collapse_multi.c.orig.scop  collapse_nested.c  collapse_nested.c.clay.scop  collapse_nested.c.orig.scop  context.c  context.c.clay.scop  context.c.orig.scop  datacopy.c  datacopy.c.clay.scop  datacopy.c.orig.scop  densify_loop.c  densify_loop.c.clay.scop  densify_loop.c.orig.scop  densify_stmt.c  densify_stmt.c.clay.scop  densify_stmt.c.orig.scop  dimcontract.c  dimcontract.c.clay.scop  dimcontract.c.orig.scop  dimprivatize_simple.c  dimprivatize_simple.c.clay.scop  dimprivatize_simple.c.orig.scop  dimreorder.c  dimreorder.c.clay.scop  dimreorder.c.orig.scop  embed_loop.c  embed_loop.c.clay.scop  embed_loop.c.orig.scop  embed_stmt.c  (+251 more)
